Alignment issue in customer conversion table (Mobile view)

--- a/src/styles/analytics.css
+++ b/src/styles/analytics.css
@@ -360,10 +360,11 @@ header.db_header_wrap {
 }
 
 .not_Found {
-  position: absolute;
+  /* position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
+  text-align: center; margin-bottom: 12px;
 }
 
 .header_dashboard .offcanvas {
